test/v3/fail/tuple_var05.v3
//@execute 0=49
component tuple_var05 {
	field a: (int, (int, int)) = (1, (2, 3));
	method main(arg: int) -> int {
		local b = ('0', ('1', '2'));
		a = b;
		return a.1.0;
	}
}
